--- a/web_flask/templates/10-hbnb_filters.html
+++ b/web_flask/templates/10-hbnb_filters.html
@@ -19,7 +19,7 @@
         <section class="filters">
             <div class="locations">
                 <h3>States</h3>
-                <h4>California, Arizona...</h4>
+                <h4>&nbsp</h4>
                 <ul class="popover">
 					{% for state in states.values()|sort(attribute='name') %}
                     <li>
@@ -35,7 +35,7 @@
             </div>
             <div class="amenities">
                 <h3>Amenities</h3>
-                <h4>Internet, Pool...</h4>
+                <h4>&nbsp</h4>
                 <ul class="popover">
 					{% for amenity in amenities.values()|sort(attribute='name') %}
                     <li>{{amenity.name}}</li>
